email credentials removed

--- a/core/.env
+++ b/core/.env
@@ -5,3 +5,9 @@ DATABASE_USER=postgres
 DATABASE_PASSWORD=root
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_USE_TLS=True
+EMAIL_HOST=smtp.gmail.com
+EMAIL_HOST_USER=chinthapandu.g@accubits.com
+EMAIL_HOST_PASSWORD=Gurrappa@123
+EMAIL_PORT=587
